--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <div class="contain">
     <form class="color-picker" action="">
       <fieldset>
-        <legend class="">Choose your theme</legend>
+        <legend class="picker-text">Choose your theme</legend>
         <label for="theme">Soft</label>
         <input type="radio"
         name="violet"
@@ -50,10 +50,10 @@
 
         <!--Punteggio-->
         <div class="score">
-          <div>SCORE</div>
-          <div
+          <p class="score-text">SCORE</p>
+          <p
           class="score-counter"
-          >0000</div>
+          >0000</p>
         </div>
       </div>
 
@@ -66,7 +66,7 @@
         <!-- Schermata di fine gioco -->
         <div class="end-game-screen hidden">
           <h2 class="end-game-text">Game<br />Over</h2>
-          <button class="play-again">Gioca ancora</button>
+          <button class="play-again ">Gioca ancora</button>
         </div>
       </div>
     </div>
